# secutils

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.dockerignore  Dockerfile.docs  Dockerfile.docs.dockerignore  Dockerfile.webui  Dockerfile.webui.dockerignore  Makefile  README.md  SECURITY.md  deploy.env.example  package-lock.json  package.json  sqlx-data.json
.cargo/: config.toml
.github/: codeql-config.yml
.github/workflows/: ci.yml
.husky/: pre-push
.perf/: config.json  history.jsonl
.sqlx/: query-004094c1786e2d659901b7a5b173563bbcc79c753279608397ec1e52ccd4f515.json  query-007bb479f840229a3ac0c2f6d150e88e396a6308864007706a2a7dc633c0debe.json  query-009fee36733e9527f00a3bae9687ccee65cbf999161b4e1e0b1d7b9ee074d8f5.json  query-00d2966ed3dd98071956f41362f4fc998eb869e270b67102da4c081596793148.json  query-00ec8bfbe72e9af8d4d12c92ee47782b5ddc4f30b163606c5092127991ab894c.json  query-0121880afb20a899856cb784e752561924a99b073e6fba4e669257b3a4c15ff1.json  query-0198d93680a7781f92e2740c73703404ac24cb09cf70c18ff3297a6524cb861d.json  query-021f5bcdbb3f216981a11a6b7e871d415e5eb9e1c9ecd3c6d2e9c740c4436896.json  query-0222c6c56a5836482fab6f4c43987a160f94cbb9968289c781ebebd6051de5f7.json  query-02bedd0de7dc0866203cb7e245cef632bb77dcbbdaff389ec519a91c1096ad9a.json  query-0355eb40b7d5b3ac5a5aa9d68e4c14775aa95756a211f2274e7e1f3062a409d3.json  query-0381661f462d1221c68aac23e94ba33c53cebd719aee83cf2c164239892c1c0b.json  query-06a96093a952ca7b5d28c78a2ffc59731fd279308f8acfe505b21f867048aefe.json  query-06b024f294f9626f281b064c118b4a192a510610f08d997d3f2a756491446158.json  query-075beb11d14dce16dcb26fa0e21dfcbe51f8df9501773dd3b4bf0aa31ecdb50d.json  query-07901c413e5cf46610c83c624914f244f932e137ba5ff561a20f7b9562d624a1.json  query-07a16e182f0a9f1fa016bf326622da942718a7cb84d65b8ea75d836ac9ce3d35.json  query-082305b1d713f175c5137cb94573226858aa787ee246e25e6ab03a8ce6cd37e2.json  query-08324f9b9c086bde12d5a6ce2c3d1b7c8d6b02e2a6b5bbc3c0776dadf9e2efde.json  query-08db1713ffb7ba363e8df5985950e6b11235c7bbb142df34cc6724ef4d72f8ac.json  query-0a17529a8109d351c0353efa1332b5bc275645af78f33fec5ce0e2039a033f10.json  query-0a1a8e0eecdda95cae8fb9bc1e046171f88b8755183de69cb5497c424e305541.json  query-0a3a936a3b4045cf7b5b15ea97ecb02afd5b5e0546e3f38ad7bcd1a1e6aae4bb.json  query-0a63a12a385eb16a95e882aa9db3ce25f5a97329e24c365c6eccc7b6b2471c06.json  query-0c3ac469ef06a8f5655082bb5a8641d3ccfbbe1537e548e3ffb2fee8ea914e0b.json  query-0cdb72df0de6efdd0570af0ae8e5b2fb46b882325ebdca726d1634e7cb0b52cc.json  query-0dc7a87ffa2ec4c15a5bc653b9719a304127581d930d47d53b7cd8f333f5cf35.json  query-0e593fac64439542319fb306da4507c749ea77ff5c3e00a94927f117487e9552.json  query-0e8a92a9c0c5b6e2500374632acf697e626d28492bd632d01ba79bb90b9542ad.json  query-0e9b174f42ef6c82128c63e9ecb187637763ab43600d584b386f5f2abd800fe6.json  query-0f0d2a96f3bd6b489a62575fd9817a9ebd702f5aa6b45496822b26dd84a22dcf.json  query-0f682e88eb57f0acf982e8fd5d60f5170ad850c0f144a009ab1ce20bfd5e04ff.json  query-0f7aac057d1a6ea625a3a4b2618b6435c7928c64795f824f0e09372fd1dcf656.json  query-0f9416568287e47a6eeb632ba3c49a2763bf20c824ec0ec4882520c8dbc20c51.json  query-0fcf65168704d7c5fc7775a2b32fad349fa23e06d64be47118ea2d2126c3ec03.json  query-11526a1fd35a44a36f327d171690d10b50190c6dea877f9fe3e8f738a43bb57e.json  query-129fcffaa1aea6ca8634f1a702b29eeaab294e951e7f9a951aae8b9f44f42f8d.json  query-12df12109591999baac1f9ba5f3faaeac81f3d9bc9bd2ba88dd9db17fce92117.json  query-13f2e94266e48902f822ce2c6b441ef0a9722a26a498440220b7352421bf1352.json  query-15480b005fa4664332bbd85f3cac61b30c015a41dc7206603e6161a11eceed6d.json  (+300 more)
assets/templates/: email_styles.hbs  (+16 more)
benches/js-runtime-perf/: Cargo.toml
benches/js-runtime-perf/scripts/: proxy.js  responder.js  trivial.js
benches/js-runtime-perf/src/: main.rs  measure.rs  report.rs  scenarios.rs
benches/js-runtime-perf/src/scenarios/: cold_start.rs  common.rs  concurrent_responders.rs  proxy_request.rs  resident_isolates.rs  responder_like.rs  steady_state.rs
components/secutils-jwt-tools/: Cargo.toml
components/secutils-jwt-tools/src/: main.rs
config/: user_identity.schema.json
dev/crates/jwt_tools/: Cargo.toml
dev/crates/jwt_tools/src/: main.rs
e2e/: eslint.config.mjs  helpers.ts  package-lock.json  package.json  playwright.config.ts  playwright.docs.config.ts  playwright.standalone.config.ts  playwright.tools.config.ts  tsconfig.json
migrations/: 20220106_primary.sql  20230131_primary.sql  20230218_primary.sql  20230511_primary.sql  20230614183626_resource_tracker.sql  20230725051203_scheduler.sql  20230819151535_scheduler_and_notifications.sql  20230927212931_user_shares.sql  20231015195044_certificates_private_keys.sql  20231019195044_certificates_private_keys.sql  20231019195044_certificates_private_keys_and_templates.sql  20231030215110_web_scraping.sql  20231109215110_web_scraping.sql  20231120203804_web_security.sql  20231123232659_webhooks.sql  20231129185220_v1.0.0-alpha.4.sql  20240126235917_v1.0.0-beta.1.sql  20240328205631_v1.0.0-beta.1.sql  20240625210528_v1.0.0-beta.2.sql  20240816210706_v1.0.0-beta.2.sql  20250503203634_v1.0.0-beta.2.sql  20250808205459_v1.0.0-beta.2.sql  20260227000000_user_secrets.sql  20260228000000_secrets_access.sql  20260301000000_api_trackers.sql  20260307120000_home_summary_indexes.sql  20260318000000_user_scripts.sql  20260322000000_user_settings.sql  20260326000000_user_tags.sql  20260403000000_workspace_restructure.sql  20260403120000_user_api_keys.sql  20260404120000_flatten_web_security_utils.sql  20260523120000_user_notification_destinations.sql  20260530000000_responder_kv.sql  20260531000000_responder_notifications.sql
scripts/: analyze-perf.ts  perf-report.html  tools-check.ts
src/: api.rs  authentication.rs  config.rs  database.rs  datastore.rs  directories.rs  error.rs  file_cache.rs  js_runtime.rs  lib.rs  logging.rs  main.rs  network.rs  notifications.rs  retrack.rs  scheduler.rs  search.rs  security.rs  server.rs  templates.rs  users.rs  utils.rs
(+1070 files in other folders)
