[package]
name = "secutils"
version = "1.0.0-beta.2"
authors = ["Aleh Zasypkin <dev@secutils.dev>"]
description = "An open-source, versatile, yet simple security toolbox for engineers and researchers."
edition = "2024"

[[bin]]
name = "secutils"
path = "src/main.rs"

[workspace]
members = [
    "components/secutils-jwt-tools"
]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
addr = { version = "0.15.6", default-features = false }
anyhow = "1.0.100"
async-stream = "0.3.6"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false }
clap = "4.5.53"
content-security-policy = "0.5.4"
croner = "3.0.1"
deno_core = "0.376.0"
directories = "6.0.0"
dotenvy = "0.15.7"
figment = "0.10.19"
futures = "0.3.31"
handlebars = "6.3.2"
hex = "0.4.3"
html5ever = "0.36.1"
humantime = "2.3.0"
itertools = "0.14.0"
jsonwebtoken = {version = "10.2.0", default-features = false }
lettre = { version = "0.11.19", default-features = false }
openssl = "0.10.75"
postcard = { version = "1.1.3", default-features = false }
rand_core = "0.9.3"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
reqwest-tracing = "0.5.8"
retrack-types = { git = "https://github.com/secutils-dev/retrack.git" }
rust-embed = "8.9.0"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
serde_json = "1.0.147"
serde_repr = "0.1.20"
serde_with = "3.16.1"
sqlx = { version = "0.8.6", default-features = false }
tantivy = "0.25.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-actix-web = "0.7.20"
tracing-subscriber = "0.3.22"
trust-dns-resolver = "0.23.2"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = "1.19.0"
zip = "7.0.0"

[dev-dependencies]
ctor = "0.6.3"
httpmock = "0.8.2"
insta = "1.45.0"
toml = "0.9.8"

[features]
default = [
    "addr/std",
    "bytes/serde",
    "clap/cargo",
    "clap/env",
    "content-security-policy/serde",
    "figment/env",
    "figment/toml",
    "handlebars/rust-embed",
    "insta/filters",
    "insta/json",
    "insta/redactions",
    "insta/toml",
    "jsonwebtoken/rust_crypto",
    "lettre/builder",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "postcard/use-std",
    "rand_core/std",
    "reqwest/json",
    "reqwest/rustls-tls-native-roots",
    "reqwest-middleware/json",
    "reqwest-retry/tracing",
    "serde_json/arbitrary_precision",
    "serde_with/time_0_3",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
    "sqlx/runtime-tokio-rustls",
    "sqlx/postgres",
    "sqlx/time",
    "sqlx/uuid",
    "time/formatting",
    "time/macros",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio-cron-scheduler/postgres_storage",
    "tracing-actix-web/uuid_v7",
    "tracing-subscriber/env-filter",
    "tracing-subscriber/json",
    "url/serde",
    "uuid/v7"
]

[profile.release]
strip = true
lto = true
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3
