[package]
name = "secutils"
version = "1.0.0-beta.2"
authors = ["Aleh Zasypkin <dev@secutils.dev>"]
description = "An open-source, versatile, yet simple security toolbox for engineers and researchers."
edition = "2024"

[[bin]]
name = "secutils"
path = "src/main.rs"

[workspace]
members = [
    "components/secutils-jwt-tools"
]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
addr = { version = "0.15.6", default-features = false }
anyhow = "1.0.101"
async-stream = "0.3.6"
bytes = "1.11.1"
chrono = { version = "0.4.43", default-features = false }
clap = "4.5.57"
content-security-policy = "0.6.0"
croner = "3.0.1"
deno_core = "0.385.0"
directories = "6.0.0"
dotenvy = "0.15.7"
figment = "0.10.19"
futures = "0.3.31"
handlebars = "6.4.0"
hex = "0.4.3"
html5ever = "0.38.0"
humantime = "2.3.0"
itertools = "0.14.0"
jsonwebtoken = {version = "10.3.0", default-features = false }
lettre = { version = "0.11.19", default-features = false }
openssl = "0.10.75"
postcard = { version = "1.1.3", default-features = false }
getrandom = "0.4.1"
regex = "1.12.3"
reqwest = "0.13.2"
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
reqwest-tracing = "0.7.0"
retrack-types = { path = "components/retrack/components/retrack-types" }
rust-embed = "8.11.0"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
serde_json = "1.0.149"
similar = "2.7.0"
serde_repr = "0.1.20"
serde_with = "3.16.1"
sqlx = { version = "0.8.6", default-features = false }
tantivy = "0.25.0"
thiserror = "2.0.18"
time = "0.3.47"
tokio = "1.49.0"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = "0.3.22"
trust-dns-resolver = "0.23.2"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = "1.20.0"
zip = { version = "7.4.0", default-features = false }

[dev-dependencies]
ctor = "0.6.3"
httpmock = "0.8.3"
insta = "1.46.3"
toml = "0.9.8"

[features]
default = [
    "addr/std",
    "bytes/serde",
    "clap/cargo",
    "clap/env",
    "content-security-policy/serde",
    "figment/env",
    "figment/toml",
    "handlebars/rust-embed",
    "insta/filters",
    "insta/json",
    "insta/redactions",
    "insta/toml",
    "jsonwebtoken/rust_crypto",
    "lettre/builder",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "postcard/use-std",
    "reqwest/json",
    "reqwest-middleware/json",
    "reqwest-retry/tracing",
    "serde_json/arbitrary_precision",
    "serde_with/time_0_3",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
    "sqlx/runtime-tokio-rustls",
    "sqlx/postgres",
    "sqlx/time",
    "sqlx/uuid",
    "time/formatting",
    "time/macros",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio-cron-scheduler/postgres_storage",
    "tracing-actix-web/uuid_v7",
    "tracing-subscriber/env-filter",
    "tracing-subscriber/json",
    "url/serde",
    "uuid/v7",
    "zip/deflate"
]

[profile.release]
strip = true
lto = true
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3
