[package]
name = "secutils"
version = "1.0.0-beta.2"
authors = ["Aleh Zasypkin <dev@secutils.dev>"]
description = "An open-source, versatile, yet simple security toolbox for engineers and researchers."
edition = "2024"

[lib]
name = "secutils"
path = "src/lib.rs"
# The `src/js_runtime.rs` test suite references crate-level modules
# (`utils::*`, `network::*`) that are only wired up by `src/main.rs`. Those
# tests are gated behind the `bin-tests` Cargo feature (off by default) and
# run via `cargo test --bin secutils --features bin-tests`. Disabling the lib
# test target is a belt-and-braces hint for `cargo test --workspace`.
test = false

[[bin]]
name = "secutils"
path = "src/main.rs"

[workspace]
members = [
    "benches/js-runtime-perf",
    "components/secutils-jwt-tools"
]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
addr = { version = "0.15.6", default-features = false }
anyhow = "1.0.102"
async-stream = "0.3.6"
brotli = "8.0.2"
byte-unit = "5.2.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", default-features = false }
clap = "4.6.1"
content-security-policy = "0.8.0"
croner = "3.0.1"
dashmap = "6.1.0"
deno_core = "0.400.0"
deno_error = "0.7.1"
directories = "6.0.0"
dotenvy = "0.15.7"
figment = "0.10.19"
flate2 = "1.1.9"
futures = "0.3.32"
handlebars = "6.4.0"
hex = "0.4.3"
html5ever = "0.39.0"
http = "1.4.0"
humantime = "2.3.0"
itertools = "0.14.0"
jsonwebtoken = {version = "10.3.0", default-features = false }
lettre = { version = "0.11.21", default-features = false }
openssl = "0.10.79"
postcard = { version = "1.1.3", default-features = false }
getrandom = "0.4.2"
regex = "1.12.3"
reqwest = "0.13.3"
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
reqwest-tracing = "0.7.0"
retrack-types = { path = "components/retrack/components/retrack-types" }
rust-embed = "8.11.0"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
serde_json = "1.0.149"
similar = "3.1.0"
serde_repr = "0.1.20"
serde_with = "3.19.0"
sqlx = { version = "0.8.6", default-features = false }
tantivy = "0.26.1"
thiserror = "2.0.18"
time = "0.3.47"
tokio = "1.52.3"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = "0.3.23"
hickory-resolver = "0.26.1"
url = "2.5.8"
utoipa = "5.5.0"
utoipa-scalar = "0.3.0"
urlencoding = "2.1.3"
uuid = "1.23.1"
zip = { version = "8.6.0", default-features = false }
zstd = "0.13.3"
argon2 = "0.5.3"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.1"

[dev-dependencies]
ctor = "1.0.4"
httpmock = "0.8.3"
insta = "1.47.2"
toml = "1.1.2"

[features]
default = [
    "addr/std",
    "bytes/serde",
    "clap/cargo",
    "clap/env",
    "content-security-policy/serde",
    "figment/env",
    "figment/toml",
    "handlebars/rust-embed",
    "insta/filters",
    "insta/json",
    "insta/redactions",
    "insta/toml",
    "jsonwebtoken/rust_crypto",
    "lettre/builder",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "postcard/use-std",
    "reqwest/gzip",
    "reqwest/json",
    "reqwest-middleware/json",
    "reqwest-retry/tracing",
    "serde_json/arbitrary_precision",
    "serde_with/time_0_3",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
    "sqlx/runtime-tokio-rustls",
    "sqlx/postgres",
    "sqlx/time",
    "sqlx/uuid",
    "time/formatting",
    "time/macros",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio/sync",
    "tokio-cron-scheduler/postgres_storage",
    "tracing-actix-web/uuid_v7",
    "tracing-subscriber/env-filter",
    "tracing-subscriber/json",
    "url/serde",
    "utoipa/actix_extras",
    "utoipa/time",
    "utoipa/uuid",
    "utoipa-scalar/actix-web",
    "uuid/v7",
    "zip/deflate"
]

# Tests that reach for crate-level modules (`crate::utils::*`, `crate::network::*`)
# not exposed by `src/lib.rs`. Enabled by the binary's test runner
# (`cargo test --bin secutils --features bin-tests`) but left off by default so
# `cargo clippy --all --all-targets -- -D warnings` can lint the lib as a test
# without hitting unresolved imports.
bin-tests = []

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
