[package]
name = "js-runtime-perf"
version = "0.1.0"
edition = "2024"
publish = false
description = "Performance harness for the Secutils JS runtime."

[[bin]]
name = "js-runtime-perf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
hdrhistogram = "7.5.4"
httpmock = "0.8.3"
libc = "0.2.186"
secutils = { path = "../.." }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
url = "2.5.8"
