[package]
name = "secutils-jwt-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
humantime = "2.3.0"
jsonwebtoken = {version = "10.2.0", default-features = false }
serde_json = "1.0.147"
time = "0.3.44"

[features]
default = [
    "jsonwebtoken/rust_crypto"
]
