[package]
name = "secutils-jwt-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
humantime = "2.3.0"
jsonwebtoken = {version = "10.3.0", default-features = false }
serde_json = "1.0.149"
time = "0.3.47"

[features]
default = [
    "jsonwebtoken/rust_crypto"
]
