[package]
name = "secutils-jwt-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
humantime = "2.3.0"
jsonwebtoken = {version = "10.3.0", default-features = false }
serde_json = "1.0.149"
time = "0.3.47"

[features]
default = [
    "jsonwebtoken/rust_crypto"
]
