[package]
name = "jwt_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
humantime = "2.1.0"
jsonwebtoken = {version = "9.3.0", default-features = false }
log = "0.4.21"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.118"
time = "0.3.36"
