[package]
name = "jwt_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
humantime = "2.2.0"
jsonwebtoken = {version = "9.3.1", default-features = false }
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
time = "0.3.41"
